# example-agent-project

./: CMakeLists.txt
.forgegod/: prd.json
src/: calc.cpp  calc.h  main.cpp
tests/: test_calc.cpp
